# trafikverket-client

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  pyproject.toml
.github/workflows/: lint.yml  release.yml
examples/: book_occasion.py  cancel_examination.py  check_reservation_timer.py  list_licences.py  login_with_autostart_token.py  rebook_examination.py  search_slots.py  search_slots_hardcode.py  view_aspirant_info.py  view_examinations.py  view_payment.py
src/trafikverket_client/: __init__.py
src/trafikverket_client/fp/: __init__.py  _client.py  _context.py  _temporal.py  _util.py  bookable_licence.py  exceptions.py  licence_information.py  licence_ref.py  logged_in_client.py  loginable.py  qr.py  session.py
src/trafikverket_client/fp/models/: __init__.py  auth.py  booking.py  confirmation.py  examination.py  licence.py  payment.py
src/trafikverket_client/fp/views/: __init__.py  examination.py  reservation.py  search_result.py  slot.py
