[project]
name = "trafikverket-client"
version = "0.1.0"
description = "En inofficiell klient för Trafikverket"
readme = "README.md"
authors = [
    { name = "Love Billenius", email = "love@billenius.com" }
]
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
    "pydantic>=2.9",
]

[project.optional-dependencies]
qr = ["qrcode>=8.0"]

[dependency-groups]
dev = ["types-qrcode>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.mypy]

[[tool.mypy.overrides]]
module = "qrcode"
ignore_missing_imports = true
follow_untyped_imports = true
